--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,13 @@
 
     <form class="search-form" id="search-form">
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
+      <button id="search-btn" type="submit">Search</button>
     </form>
 
-    <button type="button" class="load-more">Load more</button>
+    <ul class="gallery-list">
+    </ul>
 
-    <div class="gallery">
-      <!-- Карточки изображений -->
-    </div>
+    <button type="button" id="load-more" class="load-more">Load more</button>
 
     <script src="index.js" type="module"></script>
   </body>
